<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.project_x.MainActivity">

    <Button
        android:text="@string/button_length"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/length"
        android:layout_below="@+id/temp"
        android:layout_alignLeft="@+id/temp"
        android:layout_alignStart="@+id/temp" />

    <Button
        android:text="@string/button_area"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:id="@+id/area"
        android:layout_above="@+id/fourth"
        android:layout_alignLeft="@+id/mass"
        android:layout_alignStart="@+id/mass" />

    <Button
        android:text="@string/button_mass"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:id="@+id/mass"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="105dp" />

    <Button
        android:text="@string/button_temperature"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:id="@+id/temp"
        android:layout_alignBaseline="@+id/mass"
        android:layout_alignBottom="@+id/mass" />

    <Button
        android:id="@+id/fourth"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/button_time"
        android:layout_below="@+id/length"
        android:layout_alignLeft="@+id/length"
        android:layout_alignStart="@+id/length" />

    <Button
        android:id="@+id/volume"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/button_volume"
        android:layout_alignBaseline="@+id/fourth"
        android:layout_alignBottom="@+id/fourth"
        android:layout_alignLeft="@+id/area"
        android:layout_alignStart="@+id/area" />
    <Button
        android:id="@+id/energy"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/button_energy"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/fourth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/currency"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/button_currency"
        android:layout_alignBaseline="@+id/energy"
        android:layout_alignBottom="@+id/energy"
        android:layout_alignLeft="@+id/volume"
        android:layout_alignStart="@+id/volume" />
</RelativeLayout>
